[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "langchain-rabbitmq"
version = "0.1.0"
description = "LangChain tools and toolkit for managing RabbitMQ (queues, exchanges, messages, monitoring) from AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "langchain-rabbitmq contributors" }]
keywords = ["langchain", "rabbitmq", "amqp", "agents", "tools", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=0.3.85,<1.0",
    "pydantic>=2.5,<3",
    "pika>=1.3.2,<2",
    "aio-pika>=9.4,<10",
    "tenacity>=8.2,<10",
    "typing-extensions>=4.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "testcontainers[rabbitmq]>=4.7",
    "langchain>=0.3,<1.0",
]
lint = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "bandit>=1.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://github.com/Sabin2003/LangChain_da"
Repository = "https://github.com/Sabin2003/LangChain_da"
Documentation = "https://github.com/Sabin2003/LangChain_da"
Changelog = "https://github.com/Sabin2003/LangChain_da/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_rabbitmq"]

[tool.hatch.build.targets.sdist]
include = [
    "src/langchain_rabbitmq",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "ANN",          # annotations
    "S",            # bandit
    "C4",           # comprehensions
    "PT",           # pytest style
    "SIM",          # simplify
    "RET",          # return
    "TID",          # tidy imports
]
ignore = [
    "ANN401",  # Dynamic typed Any – guarded by explicit pyright rules
    "S101",    # asserts used in tests
    "UP006",   # Use `list`/`dict` builtins -- kept for runtime Python 3.9 compatibility
    "UP007",   # Optional[X] -> X | None -- 3.9 runtime parity
    "UP045",   # Optional[X] -> X | None
    "TID252",  # relative imports -- intentional package style
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN", "B017", "PT011"]
"docs/**" = ["ANN"]

[tool.pyright]
include = ["src"]
# Tests are excluded from pyright strict mode: extensive use of mocks (which
# return MagicMock with dynamic attributes) is incompatible with strict typing.
# Tests are still type-aware through standard pytest discovery + runtime checks.
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false
# Subclassing langchain_core.tools.BaseTool (a Pydantic model) requires
# narrowing `args_schema` and `_run` / `_execute` signatures, which pyright
# strict flags as Liskov violations. This mirrors the convention used in the
# langchain-community integrations themselves.
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
# `@contextlib.contextmanager` paired with `Iterator[T]` return annotations is
# the documented Python idiom; the deprecation refers to typing.Generator nuances
# that do not apply here.
reportDeprecated = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests with mocks",
    "integration: tests requiring a real RabbitMQ broker (testcontainers)",
    "e2e: end-to-end tests with LangChain AgentExecutor",
    "load: load / stress tests",
]

[tool.coverage.run]
branch = true
source = ["src/langchain_rabbitmq"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
fail_under = 90

[tool.bandit]
exclude_dirs = ["tests", "docs"]
# B101 (assert_used): asserts are used as type-narrowing hints for pyright in
# private code paths where the invariant is guaranteed by the surrounding
# logic — they are not used for input validation.
skips = ["B101"]
